k8s/backend-deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: demo-backend-deployment
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 2
  template:
    metadata:
      labels:
        app: demo
        role: backend
        version: 1.0.0
    spec:
      containers:
      - name: backend
        image: jensneuse/k8s-demo:1.0.0
        ports:
        - containerPort: 80
          port: 80
