k8s/frontend-deployment-v2.yaml
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: demo-frontend-deployment-v2
spec:
  selector:
    matchLabels:
      app: demo2
  replicas: 2
  template:
    metadata:
      labels:
        app: demo2
        role: frontend
        version: 2.0.0
    spec:
      containers:
      - name: frontend
        image: jensneuse/k8s-demo:2.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          port: 80
