k8s/frontend-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: demo-frontend-deployment
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 2
  template:
    metadata:
      labels:
        app: demo
        role: frontend
        version: 1.0.0
    spec:
      containers:
      - name: frontend
        image: jensneuse/k8s-demo:1.0.0
        ports:
        - containerPort: 80
          port: 80
