k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  app: demo
spec:
  selector:
    app: demo
    role: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
