k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: demo
    role: frontend
  ports:
  - port: 80
    name: http
